--- a/frontend/angular-ecommerce/src/app/app.component.html
+++ b/frontend/angular-ecommerce/src/app/app.component.html
@@ -7,7 +7,8 @@
         <img src="assets/images/logo.png" alt="luv2shop" class="img-responsive">
       </a>
     </div>
-    <div class="menu-sidebar-content js-scrollbar1">
+    <app-product-category-menu></app-product-category-menu>
+    <!--div class="menu-sidebar-content js-scrollbar1">
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
@@ -18,7 +19,7 @@
           </li>
         </ul>
       </nav>
-    </div>
+    </div-->
   </aside>
   <!-- END MENU SIDEBAR-->
 
