--- a/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/frontend/angular-ecommerce/src/app/components/product-details/product-details.component.html
@@ -5,7 +5,7 @@
 
     <h3>{{ product.name }}</h3>
     <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
-    <a href="#" class="primary-btn">Add to cart</a>
+    <button (click)="addToCart()" class="btn btn-primary btn-sm">Add to cart</button>
 
     <hr>
     <h4>Description</h4>
@@ -14,4 +14,3 @@
     <a routerLink="/products" class="mt-5">Back to Product List</a>
   </div>
 </div>
-
